# local_ai_agent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLI_USAGE.md  CODE_ACTIONS.md  DEPENDENCIES.md  OPENAI_SETUP.md  README.md  REPO_IMPROVEMENTS.md  main.py  motorcycle_reviews.csv  pyproject.toml  requirements-dev.txt  requirements.txt  run.py  run_typer.py  todo.md  vector.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  coverage.yml  lint.yml
docs/: embeddings_usage_examples.py
src/: __init__.py
src/cli/: __init__.py  main.py  typer_main.py
src/conversation/: __init__.py  analysis.py  enrichment.py  history.py  validation.py
src/core/: __init__.py  config.py  models.py
src/llm/: __init__.py  prompt_builder.py  providers.py  response_parser.py  schema.py
src/utils/: __init__.py  parsers.py  string.py
src/vector/: __init__.py  embeddings.py  retriever.py  store.py
tests/: README.md  __init__.py  end_to_end_chroma.py  run_all_tests.py  run_smoke.py  smoke_test.py  test_budget_enforcement.py  test_ci_smoke_deterministic.py  test_cli_typer.py  test_config.py  test_embeddings_init.py  test_enrichment.py  test_enrichment_fuzzy.py  test_extract_budget.py  test_generate_query_fallback.py  test_index_metadata_presence.py  test_invoke_model_edge_cases.py  test_llm_response_shape.py  test_openai_integration.py  test_query_generator.py  test_response_parser.py  test_schema_consistency.py  test_streaming_store.py  test_utils.py  test_vagueness.py  test_validate_and_topreviews.py  test_validation_edge_cases.py
